@@ -129,8 +129,8 @@
 <div class="section" id="windows">
 <h3>Windows<a class="headerlink" href="#windows" title="Permalink to this headline">¶</a></h3>
 <p>The Windows installer for the current beta 1 release, version 0.3.0b1 can be downloaded using the following links:</p>
-<p><a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/hyperspy-0.3.0b1.win32.exe">Hyperspy-0.3.0 beta 1 for Windows 32-bits</a></p>
-<p><a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/hyperspy-0.3.0b1.win-amd64.exe">Hyperspy-0.3.0 beta 1 for Windows 64-bits</a></p>
+<p><a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/hyperspy-0.3.0beta2.win32.exe">Hyperspy-0.3.0 beta 1 for Windows 32-bits</a></p>
+<p><a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/hyperspy-0.3.0beta2.win-amd64.exe">Hyperspy-0.3.0 beta 1 for Windows 64-bits</a></p>
 <div class="admonition warning">
 <p class="first admonition-title">Warning</p>
 <p class="last">before installing Hyperspy the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/dev/user_guide/install.html#install-dependencies" title="(in Hyperspy v0.3.dev)"><em class="xref std std-ref">the required libraries must be installed</em></a></p>
@@ -150,7 +150,7 @@
 </div>
 <div class="section" id="linux">
 <h3>Linux<a class="headerlink" href="#linux" title="Permalink to this headline">¶</a></h3>
-<p>A Debian/Ubuntu package <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.3.0b1-1_all.deb">can be downloaded here</a>.</p>
+<p>A Debian/Ubuntu package <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.3.0beta2-1_all.deb">can be downloaded here</a>.</p>
 <p>Please note that the latest version of Ubuntu and Debian, Oneiric and Wheezy respectively, are required.</p>
 </div>
 </div>
