@@ -137,6 +137,7 @@ been already used to obtain results that are published in research articles (see
 <div class="section" id="news">
 <h2>News<a class="headerlink" href="#news" title="Permalink to this headline">¶</a></h2>
 <ul class="simple">
+<li>The Hyperspy 0.3.0beta2 has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li>A new version of the ImportRPL Digital Micrograph plugin has been released to fix a bug concerning reading of SIs. See <a class="reference internal" href="download.html#import-rpl"><em>ImportRPL Digital Micrograph plugin</em></a></li>
 <li>The first beta version of Hyperspy 0.3.0 has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li>The next Hyperspy training will be on the 24th in Cambridge (UK). See <a class="reference internal" href="trainings.html#trainings"><em>Trainings</em></a>.</li>
